--- a/recenpost.html
+++ b/recenpost.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'/>
 <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
-<title>Posting Terbaru</title>
+<title>Recent Post</title>
 <style>
 body{margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;overflow:hidden}
 #recentpostnav{border:1px solid #585858;width:100%;margin:0 auto}
